ran npm run fmt

--- a/pages/integrations/github-app.mdx
+++ b/pages/integrations/github-app.mdx
@@ -2,8 +2,6 @@ import Callout from 'nextra-theme-docs/callout'
 
 # GitHub App
 
-<Callout emoji="🌟">
-  Coming Soon!
-</Callout>
+<Callout emoji="🌟">Coming Soon!</Callout>
 
 In the meanwhile, have a look at the [GitHub Action](/integrations/github-actions).
