--- a/pages/integrations/opcr.mdx
+++ b/pages/integrations/opcr.mdx
@@ -4,6 +4,4 @@ import Callout from 'nextra-theme-docs/callout'
 
 > Open Policy Registry
 
-<Callout emoji="🌟">
-  Coming Soon!
-</Callout>
+<Callout emoji="🌟">Coming Soon!</Callout>
