--- a/pages/integrations/github-actions/repo-audit.mdx
+++ b/pages/integrations/github-actions/repo-audit.mdx
@@ -1,10 +1,26 @@
 # Repo Audit
 
 <p className="flex h-6">
-  <img alt="latest-release" src="https://badgen.net/github/release/reposaur/repo-audit-action" className="inline-block mr-2"/>
-  <img alt="stars" src="https://badgen.net/github/stars/reposaur/repo-audit-action" className="inline-block mr-2"/>
-  <img alt="contributors" src="https://badgen.net/github/contributors/reposaur/repo-audit-action" className="inline-block mr-2"/>
-  <img alt="license" src="https://badgen.net/github/license/reposaur/repo-audit-action" className="inline-block mr-2"/>
+  <img
+    alt="latest-release"
+    src="https://badgen.net/github/release/reposaur/repo-audit-action"
+    className="inline-block mr-2"
+  />
+  <img
+    alt="stars"
+    src="https://badgen.net/github/stars/reposaur/repo-audit-action"
+    className="inline-block mr-2"
+  />
+  <img
+    alt="contributors"
+    src="https://badgen.net/github/contributors/reposaur/repo-audit-action"
+    className="inline-block mr-2"
+  />
+  <img
+    alt="license"
+    src="https://badgen.net/github/license/reposaur/repo-audit-action"
+    className="inline-block mr-2"
+  />
 </p>
 
 ## Overview
